# oslo.version

./: .gitreview  README.rst  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
oslo/: __init__.py
oslo/version/: __init__.py  version.py
oslo/version/tests/: __init__.py  test_version.py
pbr/: version.py
pbr/tests/: test_version.py
tests/: __init__.py  test_version.py
