[metadata]
name = oslo.version
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Oslo Version API
description-file =
    README.rst
home-page = http://pypi.python.org/pypi/oslo
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    oslo
namespace_packages =
    oslo

[wheel]
universal = 1
